2009-01-06  Adam Fedor  <fedor@gnu.org>

	* Version 1.1.2
	* A few fixes for WUnderground. Add radar images

2008-12-28  Adam Fedor  <fedor@gnu.org>

	* Version 1.1.1
	* Don't run animation if transition=0
	* More improvements for WUnderground.

2008-12-27  Adam Fedor  <fedor@gnu.org>

	* Version 1.1.0

2008-12-26  Adam Fedor  <fedor@gnu.org>

	* Add animations back for GNUstep (with new releases).
	* Add toggle screen so you can bring up preferences
	* Update WUnderground parser.
	* Handle w3m when it doesn't quit.

2008-02-22  Adam Fedor  <fedor@gnu.org>

	* Add overlay window and implement transition animation (commented
	out for GNUstep until we get child windows working).
	* Add timeout for getting weather info on GNUstep.

2007-12-24  Adam Fedor  <fedor@gnu.org>

	* Rearrange PhotoView so that it displays the images and most
	of the control stuff goes in PhotoController.
	* Added transition preferences (not implemented).
	* Fix loading weather preference values.

2007-11-06  Adam Fedor  <fedor@gnu.org>

	* PhotoView.m, PreferencesController.m: Add Keyword and Photo Path
	preferences. Fix possible double release.

2007-10-31  Adam Fedor  <fedor@gnu.org>

	* Version 1.0.0
