@@ -1,3 +1,9 @@
+2009-01-22  Adam Fedor  <fedor@gnu.org>
+
+	* Don't display iPhoto thumbnails
+	* Fix up possible problems with photo info when it's not available.
+	* Improvements to weather radar display and parsing.
+
 2009-01-06  Adam Fedor  <fedor@gnu.org>
 
 	* Version 1.1.2
